# dl-infer-learn

./: .gitignore  export_onnx.ipynb  export_onnx_with_attrs.ipynb  onnx_multi_input_output.py  onnx_read.py  onnxruntime.ipynb  readme.md  tensorrt.md
cpp/ncnn/: CMakeLists.txt  README.md  main.cpp
cpp/onnxruntime/: CMakeLists.txt  main.cpp
cpp/opencv/: CMakeLists.txt  README.md  main.cpp
cpp/openvino/: CMakeLists.txt  main.cpp
cpp/tensorrt/: CMakeLists.txt  README.md  main.cpp
models/: Math.onnx  model_with_attrs.onnx  readme.md  shufflenet_v2_x0_5-dynamic_batch-half.onnx  shufflenet_v2_x0_5-half.onnx  shufflenet_v2_x0_5.engine  shufflenet_v2_x0_5.torchscript  shufflenet_v2_x0_5.xml
models/shufflenet_v2_x0_5-dynamic-half-openvino/: model.xml
models/shufflenet_v2_x0_5-dynamic_batch-half-openvino/: model.xml  shufflenet_v2_x0_5-dynamic_batch-half.xml
models/shufflenet_v2_x0_5-openvino/: model.xml  shufflenet_v2_x0_5.xml
models/shufflenet_v2_x0_5_ncnn/: shufflenet_v2_x0_5-sim-opt.param
models/shufflenet_v2_x0_5_openvino_dynamic_batch/: shufflenet_v2_x0_5_dynamic_batch.xml
ncnn/: CMakeLists.txt  README.md  main.cpp
onnxruntime/: CMakeLists.txt  README.md  main.cpp
openvino/: CMakeLists.txt  main.cpp
python/: engine_export.py  ncnn.ipynb  onnx_test.py  onnxruntime.ipynb  opencv copy.ipynb  opencv.ipynb  openvino.ipynb  pycuda.ipynb  tensorrt.ipynb  torch.ipynb  torchscript.ipynb
